Style change at no clicable element inside contact section

--- a/css/app.css
+++ b/css/app.css
@@ -382,6 +382,11 @@ p a:hover {
         color: #EFEFEF;
     }
     
+    .contact-channel.no-hover {
+        background-color: #FFFFFF;
+        color: #FF530D;
+    }
+
     .contact-channel a {
         display: block;
     }
