Subtle CSS animation at contact links

--- a/css/app.css
+++ b/css/app.css
@@ -370,6 +370,7 @@ p a:hover {
     .contact-channel, .contact-channel a {
         font-size: 30px;
         text-align: left;
+        transition: background 0.2s ease-out, color 0.4s ease-out;
     }
     
     .contact-channel {
