--- a/css/app.css
+++ b/css/app.css
@@ -99,22 +99,6 @@ p a:hover {
     padding: 100px 10px 0 10px;
 }
 
-.portfolio-tab-item {
-    padding: 50px 0 0 0;
-}
-
-.orange {
-    color: #FF530D;
-}
-
-.dark-blue {
-    color: #2B3A42;
-}
-
-.light-gray {
-    color: #EFEFEF;
-}
-
 /* HEADER */
 
 #page-header, main {
@@ -171,10 +155,16 @@ p a:hover {
     color: #EFEFEF;
     display: block;
     font-size: 36px;
+    transition: background 0.2s ease-out, color 0.4s ease-out;
 }
 
 #hero a:first-child {
     margin-bottom: 30px;
+}
+
+#hero a:hover {
+    background-color: #EFEFEF;
+    color: #FF530D;
 }
 
 /***** INDEX *****/
@@ -191,12 +181,16 @@ p a:hover {
     max-width: 248px;
 }
 
+#about blockquote {
+    margin: auto 20px 20px;
+}
 #about ul {
     color: #2B3A42;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 18px;
     font-style: italic;
     line-height: 2em;
+    list-style-type: disc;
 }
 
 #about a {
