New project added, website translated to English, Updated wireframes at Santander Mobile and minor improvements on App.css

--- a/css/app.css
+++ b/css/app.css
@@ -182,8 +182,9 @@ p a:hover {
 }
 
 #about blockquote {
-    margin: auto 20px 20px;
+    margin: auto 0 20px;
 }
+
 #about ul {
     color: #2B3A42;
     font-family: 'Roboto Condensed', sans-serif;
@@ -191,6 +192,7 @@ p a:hover {
     font-style: italic;
     line-height: 2em;
     list-style-type: disc;
+    margin-left: 20px;
 }
 
 #about a {
@@ -486,6 +488,28 @@ p a:hover {
     text-transform: uppercase;
 }
 
+.portfolio-items .more-projects {
+    text-align: center;
+}
+
+.portfolio-items .more-projects li {
+    margin-bottom: 10px;
+}
+
+.portfolio-items .more-projects li:last-child {
+    margin-bottom: 0;
+}
+
+.portfolio-items .more-projects strong {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
+}
+
+.portfolio-items .more-projects a {
+    color: #FF530D;
+    font-size: 18px;
+}
+
 .portfolio-items .alert {
     font-family: 'Roboto Condensed', sans-serif;
 }
@@ -505,12 +529,14 @@ p a:hover {
     text-align: center;
 }
 
-.portfolio-item:last-child {
-    margin-bottom: 0;
-}
-
 .portfolio-item a {
     color: #FF530D;
+}
+
+.portfolio-item span {
+    color: #2B3A42;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
 }
 
 .portfolio-item div {
